# systemabilitymgr_samgr

./: OAT.xml  README.md  README_zh.md  bundle.json  cfi_blocklist.txt  config.gni  hisysevent.yaml  ohos.build
etc/: BUILD.gn  samgr.para  samgr.para.dac  samgr.param.dac  samgr_standard.cfg
frameworks/native/source/: system_ability_load_callback_stub.cpp  system_ability_manager_proxy.cpp  system_ability_on_demand_event.cpp  system_ability_status_change_stub.cpp  system_process_status_change_stub.cpp
interfaces/innerkits/common/: BUILD.gn  libsamgr_common.versionscript
interfaces/innerkits/common/include/: parse_util.h  sa_profiles.h  samgr_err_code.h  samgr_xcollie.h
interfaces/innerkits/dynamic_cache/: BUILD.gn
interfaces/innerkits/dynamic_cache/include/: dynamic_cache.h
interfaces/innerkits/dynamic_cache/src/: dynamic_cache.cpp
interfaces/innerkits/lsamgr/: BUILD.gn
interfaces/innerkits/rust/: BUILD.gn  Cargo.toml
interfaces/innerkits/rust/include/: system_ability_manager_wrapper.h
interfaces/innerkits/rust/src/: definition.rs  lib.rs  manage.rs  rust_samgr.rs  wrapper.rs
interfaces/innerkits/rust/tests/: BUILD.gn  basic.rs  entry.rs  mem.rs  remote.rs
interfaces/innerkits/samgr_proxy/: BUILD.gn  libsamgr_proxy.versionscript
interfaces/innerkits/samgr_proxy/include/: if_local_ability_manager.h  if_system_ability_manager.h  iservice_registry.h  isystem_ability_load_callback.h  isystem_ability_status_change.h  isystem_process_status_change.h  local_ability_manager_proxy.h  safwk_ipc_interface_code.h  sam_log.h  samgr_ipc_interface_code.h  system_ability_definition.h  system_ability_load_callback_stub.h  system_ability_manager_proxy.h  system_ability_on_demand_event.h  system_ability_status_change_stub.h  system_process_status_change_stub.h
services/common/src/: parse_util.cpp
services/common/test/mock/: BUILD.gn
services/dfx/include/: hicollie_helper.h  hisysevent_adapter.h
services/dfx/source/: hisysevent_adapter.cpp
services/lsamgr/include/: if_local_ability_manager.h  local_ability_manager_proxy.h  local_abilitys.h  safwk_ipc_interface_code.h
services/lsamgr/src/: local_ability_manager_proxy.cpp  local_abilitys.cpp
services/samgr/: var.gni
services/samgr/native/: BUILD.gn  samgr_L2.cfg  samgr_standard.cfg  samgr_standard_musl.cfg
services/samgr/native/test/unittest/: BUILD.gn
services/samgr/native/test/unittest/include/: base_system_ability_mgr_test.h  device_manager.h  device_manager_callback.h  device_status_collect_manager_test.h  dm_device_info.h  ffrt_handler_test.h  manual_ondemand_helper.h  mock_system_ability_manager_test.h  ondemand_helper.h  ref_count_collect_test.h  sa_status_change_mock.h  system_ability_manager_mock.h  system_ability_mgr_load_test.h  system_ability_mgr_new_test.h  system_ability_mgr_ondemand_test.h  system_ability_mgr_stub_load_test.h  system_ability_mgr_stub_test.h  system_ability_mgr_stub_unload_test.h  system_ability_mgr_subscribe_test.h  system_ability_state_machine_test.h  system_ability_state_scheduler_low_mem_test.h  system_ability_state_scheduler_proc_test.h  system_ability_state_scheduler_test.h
services/samgr/native/test/unittest/rust/: rust_samgr_test.rs
services/samgr/native/test/unittest/rust/service/: BUILD.gn
services/samgr/native/test/unittest/rust/service/src/: access_token.rs  lib.rs
services/samgr/native/test/unittest/src/: base_system_ability_mgr_test.cpp  common_event_collect_test.cpp  device_networking_collect_test.cpp  device_param_collect_test.cpp  device_status_collect_manager_test.cpp  device_switch_collect_test.cpp  device_timed_collect_test.cpp  ffrt_handler_test.cpp  itest_transaction_service.cpp  local_ability_manager_proxy_test.cpp  local_abilitys_test.cpp  manual_ondemand_helper.cpp  manual_ondemand_tool.cpp  mock_accesstoken_kit.cpp  mock_dbinder_service.cpp  mock_ffrt_handler.cpp  mock_penglai_service_client.cpp  mock_permission.cpp  mock_system_ability_manager_test.cpp  ondemand_helper.cpp  ondemand_tool.cpp  ref_count_collect_test.cpp  sa_status_change_mock.cpp  system_ability_event_handler_test.cpp  system_ability_manager_dumper_test.cpp  system_ability_manager_mock.cpp  system_ability_mgr_load_test.cpp  system_ability_mgr_new_test.cpp  system_ability_mgr_ondemand_test.cpp  system_ability_mgr_proxy_test.cpp  system_ability_mgr_stub_load_test.cpp  system_ability_mgr_stub_test.cpp  system_ability_mgr_stub_unload_test.cpp  system_ability_mgr_subscribe_test.cpp  system_ability_mgr_test.cpp  system_ability_mgr_util_test.cpp  system_ability_on_demand_event_test.cpp  system_ability_state_machine_test.cpp  system_ability_state_scheduler_low_mem_test.cpp  system_ability_state_scheduler_proc_test.cpp  (+2 more)
test/autotest/: ChooseDevice.py  choose_device.py  main.py
test/autotest/aw/: Disk_drop_log.py  disk_drop_log.py  get_source_path.py  push_remove_source.py
test/autotest/config/: user_config.xml
test/autotest/tools/: disk_drop_log.py  get_source_path.py  push_remove_source.py
test/fuzztest/: BUILD.gn
test/fuzztest/localsamgrproxy_fuzzer/: BUILD.gn  localsamgrproxy_fuzzer.cpp  localsamgrproxy_fuzzer.h
test/fuzztest/samgr_fuzzer/: BUILD.gn
test/fuzztest/samgrcoverage_fuzzer/: BUILD.gn  samgrcoverage_fuzzer.cpp
test/fuzztest/samgrdumper_fuzzer/: BUILD.gn  samgrdumper_fuzzer.cpp
test/fuzztest/samgrparallelize_fuzzer/: BUILD.gn  samgrparallelize_fuzzer.cpp  samgrparallelize_fuzzer.h
test/fuzztest/system_ability_manager_fuzzer/: BUILD.gn  system_ability_manager_fuzzer.cpp  system_ability_manager_fuzzer.h
test/fuzztest/systemabilitymanager_fuzzer/: BUILD.gn  systemabilitymanager_fuzzer.cpp
test/resource/: ohos_test.xml
test/resource/profile/: invalid_root.xml  sa_profile.json  sa_profile_error_bootphase.json  sa_profile_error_ondemanad_tag.json  sa_profile_error_said.json  sa_profile_large.json  sa_profile_long_libpath.json  sa_profile_long_process.json  sa_profile_multi_instance.json  sa_profile_multi_instance_all_false.json  sa_profile_multi_instance_all_true.json  sa_profile_multi_instance_single.json
test/unittest/: system_ability_manager_test.cpp
(+214 files in other folders)
