# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("config_samgr_common") {
  include_dirs = [
    "include",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy/include",
    "//foundation/distributedschedule/samgr/services/dfx/include",
    "//third_party/libxml2/include",
  ]
}

################################################################################
ohos_shared_library("samgr_common") {
  sources = [
    "//foundation/distributedschedule/samgr/services/common/src/parse_util.cpp",
    "//foundation/distributedschedule/samgr/services/dfx/source/hisysevent_adapter.cpp",
  ]

  configs = [ ":config_samgr_common" ]
  public_configs = [ ":config_samgr_common" ]
  if (is_standard_system) {
    external_deps = [
      "c_utils:utils",
      "hisysevent_native:libhisysevent",
      "hitrace_native:hitrace_meter",
      "hiviewdfx_hilog_native:libhilog",
    ]
    part_name = "samgr_standard"
  }

  public_deps = [ "//third_party/libxml2:libxml2" ]
  subsystem_name = "distributedschedule"
}
################################################################################
