# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")
module_output_path = "samgr/samgr"
samgr_dir = "//foundation/systemabilitymgr/samgr"
samgr_services_dir = "${samgr_dir}/services/samgr/native"

config("sam_fuzz_test_config") {
  include_dirs = [ "//foundation/systemabilitymgr/samgr/services/dfx/include" ]
}

##############################fuzztest##########################################
ohos_fuzztest("SystemAbilityManagerFuzzTest") {
  module_out_path = module_output_path

  fuzz_config_file = "//foundation/systemabilitymgr/samgr/test/fuzztest/systemabilitymanager_fuzzer"

  configs = [
    ":sam_fuzz_test_config",
    "${samgr_dir}/interfaces/innerkits/lsamgr:config_samgr",
    "${samgr_dir}/services/samgr/native:sam_config",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [
    "${samgr_dir}/utils/native/source/tools.cpp",
    "${samgr_services_dir}/source/system_ability_manager.cpp",
    "${samgr_services_dir}/source/system_ability_manager_stub.cpp",
    "//foundation/systemabilitymgr/samgr/services/dfx/source/hisysevent_adapter.cpp",
    "systemabilitymanager_fuzzer.cpp",
  ]
  deps = []

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "c_utils:utils",
    "eventhandler:libeventhandler",
    "hisysevent_native:libhisysevent",
    "hitrace_native:hitrace_meter",
    "hiviewdfx_hilog_native:libhilog",
    "init:libbegetutil",
    "ipc:ipc_core",
    "ipc:libdbinder",
    "samgr:samgr_common",
    "samgr:samgr_proxy",
  ]
  public_deps = [ "//third_party/libxml2:libxml2" ]
}

group("fuzztest") {
  testonly = true
  deps = []

  deps += [
    # deps file
    ":SystemAbilityManagerFuzzTest",
  ]
}
